[package]
name = "tachibana-bootloader"
version = "0.1.0"
edition = "2018"
default-run = "tachibana-bootloader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = {version = "0.11.0", features = ["alloc", "logger", "exts"]}
rlibc = "1.0.0"
uefi-services = "0.8.0"
log = { version = "0.4", default-features = false }
goblin = { version = "0.4", default-features = false, features=["elf32", "elf64", "endian_fd"] }
x86_64 = "0.14"

tachibana-common = { path = "../tachibana-common"}

